Fredrik Bergholtz - Sun Dec 12 2004
	added beta Asteroids clone (Steroids)

Courtney Cavin - Mon Dec 6 2004
	added about page
	-Wall fixes

Courtney Cavin - Tue Nov 23 2004
	inverted color - the right way around

leachbj - Sat Nov  6 2004
	implemented integrated mp3 playback
	implemented non-threaded version of audio recording & playback
	fixed settings reset to ensure that the contrast is not set to 0
	load settings now loads load contrast setting correctly
	made reset settings return to parent menu

Courtney Cavin - Sun Oct 24 2004
	calculator now uses inverse text for current selection
	calendar no longer redraws entire screen on selection change
	fix for december 31 to jan 31 bug

Courtney Cavin - Wed Oct 20 2004
	added calculator

Jens Taprogge - Fri July 27 2004
	lots of improvements around the new iTunesDB browser. Including
	playlist support (just the normal ones so far). Depends on libitunesdb
	V0.5 (http://shamrock.dyndns.org/~ln/ipod/libitunesdb_0.5.tar.gz ).

Jens Taprogge - Fri July 16 2004
	added a new iTunesDB browser written from scratch. It provides
	browsing by Track, Artist or Album so far. The implementation is based
	on libitunesdb V0.4 (http://shamrock.dyndns.org/~ln/ipod/libitunesdb_0.4.tar.gz ).

leachbj - Sat October 9 2004
	added basic line-in recording support
	minor recording bug fixes

leachbj - Fri October 8 2004
	removed limit on number of songs per artist
	fixed some memory overwrites in iTunesDB parsing

ansi - Fri October 8 2004
	new OPTION_MENU support
	cleaned up BOOLEAN_MENU support display
	implemented new OPTION_MENU for audio recording sample rate

leachbj - Thu October 7 2004
	added volume control for wav playback (requires kernel support!)
	ported calendar from linav project (http://linav.sf.net)
	merged settings menu support from ansi
	merged play/pause and timer patch from Prashant

leachbj - Fri October 1 2004
	merged wav record/playback patch from Prashant

leachbj - Sat Septemper  4 2004